--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           
           <div id="fullNme">
 
-              <div class="mb-3 col-md-6">
+              <div class= " col-md-6" id="input-group">
                   <input type="text" class="form-control" placeholder="First Name" id="firstname">
                   <div class="invalid-feedback">
                       Pleas enter your First name
@@ -28,17 +28,15 @@
               </div>
   
   
-              <div class="mb-3 col-md-6">
+              <div class="col-md-6" id="input-group">
                   <input type="text" class="form-control" placeholder="Last Name" id="lastname">
-                  <div class="invalid-feedback">
-                      Pleas enter your Last name
-                  </div>
+                  <div class="invalid-feedback"> Pleas enter your Last name</div>
               </div>
 
           </div>  
 
 
-            <div class="mb-3 col-md-12 py-2">
+            <div class="mb-3 col-md-12 py-2"id="input-group">
                 <input type="email" class="form-control" placeholder="Email" id="email">
                 <div class="invalid-feedback">
                     Pleas enter your valid email .
@@ -46,8 +44,22 @@
             </div>
 
 
-            <div class="mb-3  col-md-6  py-4  ">
+            <div class="mb-4  col-md-6  py-4  ">
                 <button id="btnSubmit" class="btn bg-success">Register</button>
+
+            </div>
+
+
+
+            <div id="users" class="border bg-white p-2 mt-4">
+
+                
+                <!-- <div class="mb-1 col-md-12 d-flex alig-itemes-center  ">
+                  <p h4>First Name,</p>
+                  <p h4>Last Name</p>
+                </div>
+
+              <div class="mb-3 col-md-12  "><p m-0 h4>email</p></div> -->
 
             </div>
 
